# mrio-python

./: .coveragerc  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPECIFICATION.md  mkdocs.yml  pyproject.toml
.github/workflows/: install.yml  test.yml
docs/: BEST_PRACTICES.md  EXAMPLES.md  index.md  modules.md
mrio/: __init__.py  chunk_reader.py  datamodel.py  dataset.py  earthengine_api.py  env_options.py  errors.py  fields.py  layout.py  main.py  partial_read.py  protocol.py  readers.py  slice_transformer.py  temporal_utils.py  types.py  typing.py  validators.py  writers.py
tests/: test_basic.py  test_chunk_reader.py  test_foo.py  test_protocol.py  test_readers.py  test_slice.py  test_slice_transformer.py  test_validators.py  test_writers.py
